# cloud-service-enum

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: deep-scans.md  result-schema.md  unauth-scans.md
src/cloud_service_enum/: __init__.py  cli.py
src/cloud_service_enum/aws/: __init__.py  auth.py  base.py  probe_assume.py  secret_scanner.py
src/cloud_service_enum/aws/services/: __init__.py  acm.py  apigateway.py  athena.py  batch.py  bedrock.py  cloudformation.py  cloudfront.py  cloudtrail.py  cloudwatch.py  codebuild.py  codecommit.py  codepipeline.py  cognito.py  config.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  elasticbeanstalk.py  glue.py  guardduty.py  iam.py  inspector.py  kinesis.py  kms.py  lambda_.py  macie.py  msk.py  opensearch.py  organizations.py  rds.py  redshift.py  route53.py  s3.py  sagemaker.py  secretsmanager.py  (+9 more)
src/cloud_service_enum/aws/unauth/: __init__.py  api_gateway.py  beanstalk.py  cloudfront.py  cognito.py  common.py  crawler.py  lambda_url.py  runner.py  s3.py
src/cloud_service_enum/azure/: __init__.py  auth.py  base.py  mfa_sweep.py
src/cloud_service_enum/azure/services/: __init__.py  administrative_units.py  aks.py  apim.py  app_registrations.py  appgateway.py  appservice.py  arc.py  automation.py  bastion.py  compute.py  conditional_access.py  containerapps.py  containerregistry.py  cosmosdb.py  defender.py  devops.py  eventgrid.py  eventhubs.py  firewall.py  frontdoor.py  graph.py  keyvault.py  loganalytics.py  logicapps.py  managed_identity.py  monitor.py  network.py  pim.py  policy.py  policyinsights.py  postgresql.py  rbac.py  resources.py  sentinel.py  servicebus.py  sql.py  storage.py  subscriptions.py
src/cloud_service_enum/azure/unauth/: __init__.py  appservice.py  runner.py  storage.py
src/cloud_service_enum/clis/: __init__.py  aws_cli.py  azure_cli.py  common.py  gcp_cli.py  osint_cli.py
src/cloud_service_enum/core/: __init__.py  auth.py  concurrency.py  config.py  display.py  enumerator.py  errors.py  loot.py  models.py  output.py  registry.py  runner.py  secrets.py
src/cloud_service_enum/core/unauth/: __init__.py  common.py
src/cloud_service_enum/data/: __init__.py  azure-storage-account-suffixes.txt  gcp_owner_permissions.txt  gcs-bucket-suffixes.txt  s3-bucket-suffixes.txt  subdomains.txt
src/cloud_service_enum/gcp/: __init__.py  auth.py  base.py
src/cloud_service_enum/gcp/services/: __init__.py  bigquery.py  binaryauthorization.py  cloudarmor.py  cloudfunctions.py  cloudrun.py  cloudsql.py  compute.py  dns.py  firestore.py  gke.py  iam.py  iap.py  kms.py  logging.py  memorystore.py  monitoring.py  project.py  pubsub.py  secretmanager.py  securitycenter.py  spanner.py  storage.py  vertexai.py  vpc.py
src/cloud_service_enum/gcp/unauth/: __init__.py  bucket.py  cloudrun.py  runner.py
src/cloud_service_enum/osint/: __init__.py  enumerator.py
src/cloud_service_enum/reporting/: __init__.py  writer.py
